# lilpipe

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.binder/: requirements.txt
.github/workflows/: ci.yaml  publish.yaml
examples/: example.ipynb
src/lilpipe/: __init__.py  enums.py
src/tinypipe/: __init__.py  base.py  composite.py  engine.py  enums.py  models.py  step.py  utils.py
tests/: test_base.py  test_composite.py  test_engine.py  test_enums.py  test_models.py  test_step.py  test_utils.py
