[project]
name = "lilpipe"
version = "0.1.3"
description = "A tiny, typed, sequential pipeline engine for Python"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Andrew Ruba" }]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed"
]

dependencies = [
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
black = "^25.1.0"
ruff = "^0.12.12"
mypy = "^1.17.1"
pytest = "^8.4.2"
pytest-cov = "^6.3.0"
ipykernel = "^6.30.1"

